<resources>
    <string name="version">1.1.5</string>
    <string name="fb_app_id">627683907348233</string>
    <string name="app_name">¡Se le tiene!</string>
    <string name="label_search">Busqueda</string>
    <string name="label_profile">Mi Cuenta</string>
    <string name="label_offer">Ofrecer</string>
    <string name="label_login">Ingresar</string>
    <string name="label_register">Registro</string>
    <string name="label_info">Acerca de</string>
    <string name="loading">Cargando</string>
    <string name="error_network">Comprueba tu conexion a internet</string>
    <string name="error_server_timeout">Error al conectar, el servidor no responde</string>
    <string name="error_auth">Problema de autenticación</string>
    <string name="error_server">Ocurrió un error con el servidor</string>
    <string name="error_client">Comprueba que los datos sean correctos</string>
    <string name="error_generic">Ocurrió un error</string>
    <string name="start.facebook">Ingresa con Facebook</string>
    <string name="start.email">Ingresa con Email</string>
    <string name="start.new">Nuevo Usuario</string>
    <string name="start.offer">¿Tienes un producto o servivio que ofrecer?\nRegístrate</string>
    <string name="rl.send">Enviar registro</string>
    <string name="rl.name">nombre</string>
    <string name="rl.email">email</string>
    <string name="rl.id">cédula</string>
    <string name="rl.phone">teléfono</string>
    <string name="rl.department">departamento</string>
    <string name="rl.city">ciudad</string>
    <string name="rl.pass">contraseña (min. 6 caracteres)</string>
    <string name="rl.pass_confirm">confirmar contraseña</string>
    <string name="rl.name_hint">Nombre completo</string>
    <string name="rl.email_hint">ejemplo@undominio.com</string>
    <string name="rl.id_hint">Cédula de ciudadanía</string>
    <string name="rl.phone_hint">Teléfono de contacto</string>
    <string name="rl.pass_hint">Ingrese su contraseña</string>
    <string name="rl.pass_conf_hint">Repita la contraseña</string>
    <string name="rl.sign_in">Entrar</string>
    <string name="rl.fill_facebook">Llenar con datos de Facebook</string>
    <string name="rl.tos">Al enviar este formulario está aceptando los</string>
    <string name="rl.progress">Enviando datos al servidor</string>
    <string name="rl.user_created">Usuario creado con éxito</string>
    <string name="rl.loging">Logueando usuario</string>
    <string name="rl.fb_conecting">Conectando con facebook</string>
    <string name="rl.pass_reset">Olvide mi contraseña</string>
    <string name="rl.pass_reset_message">Email enviado</string>
    <string name="error_invalid_email">Dirección de e-mail invalida</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_incorrect_phone">Teléfono incorrecto</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_user_exists">Un usuario con el mismo Email ya existe</string>
    <string name="product">Producto</string>
    <string name="service">Servicio</string>
    <string name="offer.product_title">Nombre de producto</string>
    <string name="offer.service_title">Nombre de servicio</string>
    <string name="offer.add_photo">añadir foto</string>
    <string name="offer.description">Descripcion</string>
    <string name="offer.comments">Comentarios</string>
    <string name="offer.training">Capacitaciones</string>
    <string name="offer.submit_product">Ofercer producto</string>
    <string name="offer.submit_service">Ofrecer servicio</string>
    <string name="offer.creating_product">Creando Producto</string>
    <string name="offer.creating_service">Creando Servicio</string>
    <string name="offer.uploading_pic">Subiendo Imagen</string>
    <string name="offer.created_service">Tu servicio a sido creado con éxito</string>
    <string name="offer.created_product">Tu producto a sido creado con éxito</string>
    <string name="dps_about">Departamento para la Prosperidad Social\n\n©2013 - Derechos Reservados\n\nTenga en cuenta que esta aplicación requiere acceso a internet y puede consumir recursos de su plan de datos.</string>
    <string name="team">Autores: Equipo Olinguito</string>
    <string name="team.daniel">Daniel Olano Castro</string>
    <string name="team.roberto">Roberto Sarmiento Jalkh</string>
    <string name="team.jorge">Jorge R Ovalle Zuelta</string>
    <string name="team.daniels">Daniel Suárez Pérez</string>
    <string name="team.david">David Barinas Orjuela</string>
    <string name="tos">Términos y condiciones ¡Se le Tiene!\n\nUso general\n\nPara ofrecer productos o servicios en esta aplicación es requisito pertenecer a alguno de los programas del Departamento para la Prosperidad Social, la información suministrada solo será publicada luego de ser verificada por parte de la entidad y bajo la autorización del ciudadano.\nEs importante que la información suministrada sea totalmente verídica y el oferente este en capacidad de suplir el producto o servicio publicado en la aplicación.\nEl Departamento para la Prosperidad Social no se hace responsable de las ofertas publicadas en esta aplicación; la única labor de la entidad es articular la oferta y la demanda para la generación de oportunidades entre la población pobre y vulnerable del país y no cumple ninguna función transaccional.\n\nOBLIGACIONES DEL USUARIO.\n\n 1. Los USUARIOS en general  son responsables de mantener la confidencialidad y custodia de sus datos y de su contraseña. Serán así mismo, responsables de todos los usos de su registro. En caso de olvido, manipulación, inactivación o sospecha de fraude o utilización indebida los usuarios deberán notificar inmediatamente al Departamento para la Prosperidad Social cualquier uso sin autorización de su registro o contraseña.\n2. Registrar información veraz, seria, y verificable de la exigida dentro del aplicativo, trátese de información personal, de los servicios o de los productos según sea el caso.\n3. Mantener actualizada la información de oferta de los productos y servicios asi como datos de contacto.\n 4. Responder por todas las órdenes transmitidas a través de su cuenta y clave privada de acceso, las cuales se supondrán emitidas por el USUARIO.\n5. Utilizar racionalmente la aplicación y los servicios, observando la ley y las buenas costumbres, el orden público y la moral.\n6. Se prohíbe a los USUARIOS violar o intentar violar la seguridad de la aplicación del Departamento para la Prosperidad Social “Se le Tiene”, incluyendo pero no limitándose a:\na. Acceder a datos que no estén destinados a tal usuario o entrar en un servidor o cuenta cuyo acceso no está autorizado al usuario,\nb. Evaluar o probar la vulnerabilidad de un sistema o red, o violar las medidas de seguridad o identificación sin la adecuada autorización,\n c. Utilizar la información consignada en las bases de datos la aplicación para fines diferentes a la adquisición de servicios o productos, suplantar el nombre del Departamento para la Prosperidad Social o utilizar el propio para obtener cualquier clase de beneficio distintos a los designados para el funcionamientos de la aplicación.\n7. Cuando usted se registra en este aplicativo como "oferente de un producto o servicio" (persona natural), se le solicitará que suministre información personal de contacto y descripción del producto o servicio a ofrecer siguiendo las indicaciones para cada caso. En adición a los términos y condiciones que puedan ser previstos en otras políticas de privacidad en esta aplicación, usted entiende y acuerda que el Departamento para la Prosperidad Social puede revelar y consultar la información a terceras personas con fines de los servicios establecidos en la aplicación; siempre y cuando, al momento de inscribir su registro en la aplicación haya aceptado ser contactado por los usuarios de la aplicación. \n\nLIMITACIÓN Y EXONERACIÓN DE RESPONSABILIDAD DEL DEPARTAMENTO PARA LA PROSPERIDAD SOCIAL.\n1. El Departamento para la Prosperidad Social podrá interrumpir discrecionalmente, en cualquier momento y sin necesidad de previo aviso, el acceso del USUARIO a los servicios de la aplicación o a una parte de los mismos.\n 2. El Departamento para la Prosperidad Social no garantiza la disponibilidad y continuidad del funcionamiento de la aplicación y de los servicios o productos.\n4. El Departamento para la Prosperidad Social no asume responsabilidad alguna por los daños y perjuicios de cualquier naturaleza que puedan derivarse de la transmisión, difusión, almacenamiento, puesta a disposición, recepción, obtención o acceso al contenido de la aplicación, y en particular, aunque no de modo exclusivo, por los daños y perjuicios que puedan ocasionarse por:\na. El incumplimiento de la ley, la moral y las buenas costumbres generalmente aceptadas o el orden público como consecuencia de la transmisión, difusión, almacenamiento, puesta a disposición, recepción, obtención o acceso al contenido de la aplicación.\nb. La infracción de los derechos de propiedad intelectual e industrial, de los secretos empresariales, de compromisos contractuales de cualquier índole, de los derechos al honor, a la intimidad personal y familiar y a la imagen de las personas, de los derechos de propiedad y de toda otra naturaleza pertenecientes a un tercero como consecuencia de la transmisión, difusión, almacenamiento, puesta a disposición, recepción, obtención o acceso al contenido de la aplicación.\nc. La realización de actos de competencia desleal y publicidad ilícita como consecuencia de la transmisión, difusión, almacenamiento, puesta a disposición, recepción, obtención o acceso al contenido de la aplicación.\nd. La falta de exhaustividad, pertinencia y/o actualidad del contenido de la aplicación.\ne. El hecho de que las expectativas generadas por el contenido de la aplicación no se consideren adecuadas para algún propósito.\nf. El incumplimiento, retraso en el cumplimiento, cumplimiento defectuoso o terminación por cualquier causa de las obligaciones contraídas con terceros a través de o con motivo del acceso al contenido de la aplicación.\n\nDISPOSICIONES FINALES\nLa violación de cualquiera de los términos y condiciones de uso de esta plataforma, puede acarrear responsabilidades civiles, penales y/o disciplinarias en aquellos casos en que se trate de funcionarios pertenecientes a las agencias públicas de gestión y colocación de empleo que hagan uso de la misma. El Departamento para la Prosperidad Social pondrá en conocimiento de las autoridades competentes cualquier irregularidad que ponga en riesgo el funcionamiento de esta aplicación, con el fin que se adelanten las investigaciones y acciones legales que correspondan. Los presentes Términos y Condiciones se rigen por las leyes colombianas. La jurisdicción para cualquier reclamación que surja de estos Términos y Condiciones será exclusivamente la de los tribunales y jueces de la República de Colombia. Si algún aparte de estos Términos y Condiciones es declarada nula o inválida o ineficaz, ello no afectará la validez del contenido restante de estos Términos y Condiciones.\n</string>
    <string name="tos_label">Términos y condiciones</string>
    <string name="search_hint">Ingresa palabras clave</string>
    <string name="list.empty">Ningun elemento para mostrar</string>
    <string name="list.filter">Filtrar busqueda</string>
    <string name="action_settings">Settings</string>
    <string name="filter.all">Todos</string>
    <string name="filter.title">Filtrar búsqueda</string>
    <string name="filter.category">Seleccione la categoría</string>
    <string name="filter.department">Seleccione un departamento</string>
    <string name="filter.text">Ingrese palabras clave</string>
    <string name="filter.text.hint">Ejm: Alimentos, Empanadas, Trigo</string>
    <string name="filter.city">Ciudad</string>
</resources>