<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.olinguito.seletiene.app.ItemListActivity" >
    <item
            android:id="@+id/action_search"
            android:title="@string/label_search"
            android:icon="@drawable/ic_action_search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="always|collapseActionView"
            />
    <item android:id="@+id/action_offer"
          android:title="@string/label_offer"
          android:icon="@drawable/ic_action_add"
          app:showAsAction="always|withText" />

    <item
            android:id="@+id/action_profile"
            android:title="@string/label_profile"
            android:icon="@drawable/ic_action_profile"
            app:showAsAction="always|withText"
            />

</menu>
