<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="co.olinguito.seletiene.app.InfoActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:src="@drawable/logo_med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/app_name"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:background="@drawable/bg_white_round_border"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/dps_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:src="@drawable/dps"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:src="@drawable/mintic"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
                android:text="@string/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_white_round_border">

            <TableRow
                    android:gravity="center"
                    android:padding="8dp">

                <TextView
                        android:layout_gravity="center"
                        android:text="@string/team.daniel"
                        android:textSize="15sp"/>
            </TableRow>

            <TableRow
                    android:gravity="center"
                    android:padding="8dp">

                <TextView
                        android:layout_gravity="center"
                        android:text="@string/team.jorge"
                        android:textSize="15sp"/>
            </TableRow>

            <TableRow
                    android:gravity="center"
                    android:padding="8dp">

                <TextView
                        android:layout_gravity="center"
                        android:text="@string/team.roberto"
                        android:textSize="15sp"/>
            </TableRow>

            <TableRow
                    android:gravity="center"
                    android:padding="8dp">

                <TextView
                        android:layout_gravity="center"
                        android:text="@string/team.daniels"
                        android:textSize="15sp"/>
            </TableRow>

            <TableRow
                    android:gravity="center"
                    android:padding="8dp">

                <TextView
                        android:layout_gravity="center"
                        android:text="@string/team.david"
                        android:textSize="15sp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>
